# tray

./: package.json  pnpm-lock.yaml  tailwind.config.cjs  translate.html  tsconfig.json  vite.config.ts
src/: App.tsx  common.css.ts  main.tsx  style.css  types.d.ts
src-tauri/: .env  Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/commands/: authorization.rs  mod.rs  setting.rs  translate.rs
src/component/Card/: index.tsx
src/component/Copy/: index.tsx
src/component/Reader/: Translate.tsx  index.css.ts  index.tsx
src/component/Translation/: index.css.ts  index.tsx
src/hooks/: useTranslate.ts
src/pages/translate/: index.tsx  translate.css.ts  translate.tsx
src/store/: index.ts
src/utils/: DOM.ts
